# fullsendwaxing-server

./: Cargo.toml  README.md  docker-compose.yml
database/: init.sql
src/: lib.rs  main.rs
src/database/: appointments.rs  blogs.rs  mod.rs  prelude.rs  tasks.rs  users.rs
src/middleware/: authorize.rs
src/routes/: always_errors.rs  appointments_controller.rs  create_appointment.rs  get_appointment.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs  users_controller.rs
src/utilities/: claims.rs  flags.rs  fsw_error.rs  mod.rs
