[package]
name = "fullsendwaxing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = { version = "1.1.0", features = ["client"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.195", features = ["derive"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower-http = { version = "0.5.1", features = ["cors"] }
