[package]
name = "fullsendwaxing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
hyper = { version = "1.1.0", features = ["client"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower-http = { version = "0.5.1", features = ["cors"] }
sea-orm = { version = "0.12.12", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
chrono = { version = "0.4.33", features = ["serde"] }
bitflags = { version = "2.4.2", features = ["serde"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
log = "0.4.20"
